@@ -1,3 +1,4 @@
+* Add estimation count to ModelStorage
 * Support empty digits in format_number of Report
 * Add digits mixin
 * Use argon2 or scrypt to hash password by default
